Electronic Store using ReactRouter nd ContextApi

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@
 
 body {
   font-family: 'Poppins', sans-serif;
- background-color: cadetblue;
+ background-color: rgb(232, 238, 238);
   min-height: 100vh;
 }
