--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,16 +1,13 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1.1rem 20px;
-    background-color:  rgb(177, 90, 90);
-    color: rgba(0, 0, 0, 0.726);
-    text-align:center;
-    font-size: 20px;
-    
-  }
+  background-color: #007bff;
+  color: #f8f0f0;
+  padding: 5px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
   
-  .navbar-links ul {
+  .nav-links {
     list-style: none;
     display: flex;
     gap: 1.5em;
@@ -19,8 +16,35 @@
     align-items: center;
   }
   
-  .navbar-links a {
-    color: white;
+  .nav-links a {
+    color: black;
     text-decoration: none;
+  }
+  .menu-icon {
+    font-size: 1.8rem;
+    cursor: pointer;
+    display: none;
+  }
+  @media (max-width: 768px) {
+    .menu-icon {
+      display: block;
+    }
+    .nav-links  {
+      display: none;
+      flex-direction: column;
+      background-color: #333;
+      position: absolute;
+      top: 55px;
+      right: 30px;
+      width: 200px;
+      padding: 1rem;
+      border-radius: 8px;
+    }
+
+    .nav-links.show {
+      display: flex;
+    }
+
+  
   }
   
